--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <header>
         <section id="intro">
             <div class="intro-animation">
-                <h1>How to take care of your <br>smart dogs</h1>
+                <h1>Meet new and interesting dogs <br>in your area</h1>
                 <p class="description">
-                Be a proud dog parent when you've successfully potty-trained your beloved puppy.
+                Brighten up your day in no time
                 </p>
             </div>
        </section>
